compiler/tests/should-pass/code-generation/functions/NoRet.via
host alice
host bob
assume alice trusts bob
assume bob trusts alice

fun main() {
    val a : int = input int from alice;
    val b : int = input int from bob;
    f(a, b);
}

fun f(a: int{alice}, b:int{bob}) {
    val win: bool = a == b;
    output win to alice;
    output win to bob;
}
