compiler/tests/should-fail/OutParamDupInitialization2.via
/* OutParameterInitializationError */

fun add10(a: int{alice}, b: out int{bob}) {
    if (a < 10) {
        out b = 10;
    }
    out b = 20;
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output a to alice;
}

host alice
host bob
